# logwin

./: .dockerignore  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  Dockerfile  README.md  make.bat
aes/src/: CMakeLists.txt  aes.c
aes/test/: CMakeLists.txt  aes.test.c  entry.c
auth/src/: CMakeLists.txt  login.c  signUp.c
cli/: CMakeLists.txt  cli.c  errorHandler.c  errorHandler.h  timeLogger.c  timeLogger.h
cli/src/: CMakeLists.txt  cli.c
cmake-modules/: argon2.cmake  gclados.cmake  pdcurses.cmake
include/: app.h
include/aes/: aes.h
include/auth/: auth.h  constants.h
include/main/: main.h
include/menu/: menu.h
include/sha256/: sha256.h
include/utils/: inputString.h  utils.h
internal/: CMakeLists.txt
internal/auth/src/: CMakeLists.txt  authUtils.c  authUtils.h  login.c  loginWithFilePath.c  signUp.c  usersDB.c  usersDB.h
internal/main/src/: CMakeLists.txt  addNewLogin.c  filterLogins.c  filterLogins.h  getUserDataFilename.c  handleLoginSelect.c  listLogins.c  saveLoginCredentials.c
internal/main/test/: CMakeLists.txt  entry.c  filterLogins.test.c
internal/menu/src/: CMakeLists.txt  handleSelectedChange.c  menu.c
internal/menu/test/: CMakeLists.txt  entry.c  handleSelectedChange.test.c
internal/utils/src/: CMakeLists.txt  clearLine.c  fileExists.c  includesSlashes.c  inputString.c  isStrongPassword.c  modifyString.c  mvprintColorText.c  printColorText.c
internal/utils/test/: entry.c  includesSlashes.test.c
main/src/: CMakeLists.txt  addLoginCredentials.c  addNewLogin.c  handleLoginSelect.c  listAllCredentials.c  listLogins.c  main.c  saveLoginCredentials.c
menu/src/: CMakeLists.txt  menu.c
menu/test/: entry.c
sha256/src/: sha256.c
sha256/test/: CMakeLists.txt  entry.c  sha256.test.c
utils/src/: CMakeLists.txt  clearLine.c  disableKeypad.c  enableKeypad.c  getElementsSize.c  inputString.c  isStrongPassword.c  mvprintColorText.c  mvprintErrorMessage.c  nullifyString.c  printColorText.c  printErrorMessage.c
utils/test/: CMakeLists.txt  entry.c  fileExists.test.c  isStrongPassword.test.c  nullifyString.test.c
